--- a/Substation Builder/Substation Builder.csproj
+++ b/Substation Builder/Substation Builder.csproj
@@ -114,16 +114,13 @@
     <Compile Include="Pages\DatabaseView\CTPage.xaml.cs">
       <DependentUpon>CTPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\OnelineView\ButtonsPanel.xaml.cs">
-      <DependentUpon>ButtonsPanel.xaml</DependentUpon>
+    <Compile Include="Pages\OnelineView\Test Panel.xaml.cs">
+      <DependentUpon>Test Panel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\OnelineView\ConnectorPropertyEditor.xaml.cs">
       <DependentUpon>ConnectorPropertyEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\DiagramObject.cs" />
-    <Compile Include="Pages\OnelineView\Relay.xaml.cs">
-      <DependentUpon>Relay.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\OnelineView\ParametersEditor.xaml.cs">
       <DependentUpon>ParametersEditor.xaml</DependentUpon>
     </Compile>
@@ -164,15 +161,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\OnelineView\ButtonsPanel.xaml">
+    <Page Include="Pages\OnelineView\Test Panel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\OnelineView\ConnectorPropertyEditor.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\OnelineView\Relay.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
